--- a/themes/blank/layouts/_default/single.html
+++ b/themes/blank/layouts/_default/single.html
@@ -1,11 +1,15 @@
 {{ define "main" }}
-	<main class="px-[8vw] pt-[4vw]">
-      <div class="page-title mb-[4vw]">
-        <div class="text-xl mb-6 opacity-45">
-			<time class="mono" datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">{{ .Date.Format "2006.01.02" }}</time>
-		</div>
-		<h1>{{ .Title }}</h1>
-      </div>
+	<main class="px-[8vw] pt-[8vw]">
+      
+		<div class="page-title mb-[4vw]">
+			<h1>{{ .Title }}</h1>
+			<div class="text-xl mt-4 opacity-45">
+				<time class="mono text-base" datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">
+					{{ .Date.Format "Jan 2, 2006" }}
+				</time>
+			</div>
+      	</div>
+
 		<div class="long-form">
 			{{ .Content }}
 		</div>
