--- a/public/css/style.css
+++ b/public/css/style.css
@@ -201,6 +201,8 @@ p.row {
   max-width: 100%;
   border-radius: 8px;
   margin: 40px 0px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .long-form p code {
