--- a/themes/blank/assets/style.css
+++ b/themes/blank/assets/style.css
@@ -671,6 +671,10 @@ video {
   width: 100%;
 }
 
+.w-\[var\(--content-width\)\] {
+  width: var(--content-width);
+}
+
 .min-w-9 {
   min-width: 2.25rem;
 }
@@ -922,6 +926,12 @@ video {
 
 .transition-all {
   transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
