--- a/themes/blank/layouts/_default/summary.html
+++ b/themes/blank/layouts/_default/summary.html
@@ -1,11 +1,8 @@
 <li class="border-t border-[var(--color-border-light)]">
   <a href="{{ .Permalink }}">
-    <article
-      class="flex flex-col sm:flex-row p-8  hover:bg-[var(--color-bg-lightest)] transition-all group relative rounded-md min-w-96 md:px-[8vw]"
-    >
-      <!-- <div class="absolute bottom-0 left-0 w-full h-32 bg-gradient-to-t from-[#16161d]"></div> -->
+    <article class="flex flex-col p-[8vw]  hover:bg-[var(--color-bg-lightest)] transition-colors group relative rounded-md min-w-96">
 
-      <div class="mx-auto min-w-[var(--content-width)]">
+      <div class="mx-auto max-w-[var(--content-width)]">
         <p class="mt-4 mb-1 opacity-45 text-base">
           <time class="mono text-sm" datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">
               {{ .Date.Format "Jan 2, 2006" }}
@@ -22,7 +19,7 @@
             <a href="{{ .Permalink }}">Read more...</a>
           {{ end }}
         </p>
-        <div class="overflow-hidden transition-all rounded-md max-w-[var(--content-width)]">
+        <div class="overflow-hidden transition-all rounded-md">
           {{ with .Resources.GetMatch .Params.featured_image }}
             <img alt="..." src="{{ .RelPermalink }}" />
           {{ end }}
