--- a/themes/blank/static/css/style.css
+++ b/themes/blank/static/css/style.css
@@ -4,9 +4,7 @@
 *,::after,::before{box-sizing:border-box}*{margin:0}body{line-height:1.5;-webkit-font-smoothing:antialiased}canvas,img,picture,svg,video{display:block;max-width:100%}button,input,select,textarea{font:inherit}h1,h2,h3,h4,h5,h6,p{overflow-wrap:break-word}p{text-wrap:pretty}h1,h2,h3,h4,h5,h6{text-wrap:balance}#__next,#root{isolation:isolate}
 
 body {
-  /* max-width: 1320px; */
   margin: 0 auto;
-  /* padding: 64px; */
   font-family: var(--font-family-sans);
   font-size: var(--font-base);
   line-height: 1.55;
@@ -14,17 +12,29 @@ body {
   color: var(--color-foreground);
 }
 
-header a.active { background-color: var(--color-bg-light); }
+header a.active {
+  background-color: var(--color-bg-light);
+}
 
 .mono { font-family: "Jetbrains Mono"; }
+.sans { font-family: var(--font-family-sans); }
+.serif { font-family: var(--font-family-serif); }
+.small {
+  font-size: var(--font-size-smaller);
+  letter-spacing: 0.0125em;
+}
+.large {
+  font-size: var(--font-size-larger);
+  font-family: var(--font-family-sans);
+  line-height: 150%;
+  margin-bottom: .5em;
+}
+
+
 
 main,
 .long-form h1 {
   margin-bottom: calc(10vw + 4rem);
-}
-
-article .meta {
-  min-width: 180px;
 }
 
 article h3 a {
@@ -32,18 +42,7 @@ article h3 a {
   text-decoration: none;
 }
 
-article img {
-  margin-top: 24px;
-}
-*/
-
 /* Single Page */
-
-.page-title {
-  margin-bottom: 64px;
-}
-
-/* .page-title */
 
 h1 {
   font-size: clamp(2rem, 6vw + 1rem, 6.25rem);
@@ -80,6 +79,8 @@ h6 {
   font-weight: 800;
   text-transform: uppercase;
 }
+
+em { font-style: italic; }
 
 .long-form h1,
 .long-form h2,
@@ -165,28 +166,6 @@ h6 {
   list-style-type: square;
 }
 
-.long-form p.large {
-  font-size: var(--font-size-larger);
-  font-family: var(--font-family-sans);
-  line-height: 150%;
-  margin-bottom: .5em;
-}
-
-p.sans {
-  font-family: var(--font-family-sans);
-}
-
-p.small {
-  font-size: var(--font-size-smaller);
-  font-family: var(--font-family-sans);
-  letter-spacing: 0.0125em;
-}
-
-p.row {
-  padding-top: 16px;
-  border-top: 1px solid hsla(0, 100%, 100%, 0.2);
-}
-
 .long-form blockquote p {
   font-family: var(--font-family-sans);
   line-height: var(--line-height-md);
@@ -225,9 +204,7 @@ p.row {
   margin-right: auto;
 }
 
-.serif {
-  font-family: var(--font-family-serif);
-}
+
 
 pre {
   background-color: var(--color-bg-lightest);
@@ -236,18 +213,7 @@ pre {
   font-size: 87.5%;
 }
 
-.col-left,
-.col-right {
-  width: calc(50% - 8px);
-}
 
-em {
-  font-style: italic;
-}
-
-.long-form .image-tiny {
-  max-width: 320px;
-}
 
 h5 + h4 {
   margin-top: 0px !important;
@@ -263,7 +229,6 @@ h5 + h4 {
 
 body {
   /* background-color: #ffffff; */
-  /* color: #000000; */
   transition:
     background-color 0.5s ease,
     color 0.25s ease;
