--- a/public/css/style.css
+++ b/public/css/style.css
@@ -197,6 +197,10 @@ em { font-style: italic; }
   background-color: none;
 }
 
+.long-form pre {
+  margin-bottom: 1.25em;
+}
+
 .long-form .inline-img {
   width: 100%;
   max-width: var(--content-width);
@@ -264,4 +268,15 @@ body.dark {
 
 #theme-toggle i {
   transition: opacity 0.3s ease; /* Smooth icon transitions */
+}
+
+.banner {
+  background-color: var(--color-bg-lightest);
+  padding: 12px 16px;
+  border-radius: 6px;
+  margin-bottom: 48px;
+  color: var(--color-foreground);
+  max-width: var(--content-width);
+  margin-left: auto;
+  margin-right: auto;
 }
