--- a/themes/blank/layouts/index.html
+++ b/themes/blank/layouts/index.html
@@ -4,7 +4,9 @@
 
 
     <!-- <ul id="grid-posts" class="md:grid md:grid-cols-2 xl:grid-cols-3 gap-2"> -->
-    <ul class="gap-2">
+      <p class="text-2xl px-[8vw] pb-10 tracking-tight opacity-45">Recent thoughts</p>
+
+      <ul class="gap-2">
       {{ $paginator := .Paginate (where .Site.RegularPages "Type" "posts") }}
       {{ range $paginator.Pages }}
 
