--- a/themes/blank/static/css/style.css
+++ b/themes/blank/static/css/style.css
@@ -45,9 +45,9 @@ article h3 a {
 /* Single Page */
 
 h1 {
-  font-size: clamp(2rem, 6vw + 1rem, 6.25rem);
-  font-weight: 700;
-  line-height: 100%;
+  font-size: clamp(2rem, 6vw + 1rem, 6rem);
+  /* font-weight: 700; */
+  line-height: 1;
   letter-spacing: -0.0375em;
 }
 
