--- a/themes/blank/layouts/_default/single.html
+++ b/themes/blank/layouts/_default/single.html
@@ -1,13 +1,11 @@
 {{ define "main" }}
 	<main class="px-[8vw] pt-[8vw]">
       
-		<div class="page-title mb-[4vw]">
-			<h1>{{ .Title }}</h1>
-			<div class="text-xl mt-4 opacity-45">
-				<time class="mono text-base" datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">
-					{{ .Date.Format "Jan 2, 2006" }}
-				</time>
-			</div>
+		<div class="page-title mb-[8vw] mx-auto max-w-[--content-width]">
+			<time class="mono text-sm opacity-45" datetime="{{ .Date.Format "2006-01-02T15:04:05" }}">
+				{{ .Date.Format "Jan 2, 2006" }}
+			</time>
+			<p class="text-4xl tracking-tight pt-4">{{ .Title }}</p>			
       	</div>
 
 		<div class="long-form">
