add favicon + little tweaks

--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -3,22 +3,23 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>{{ .Title }}</title>
+	<title>{{ if .IsHome }}👋 • {{ else }}{{ if .Page.Title }}{{ .Page.Title }} • {{ end }}{{ end }}{{ .Site.Title }}</title>
+
 	{{ with .Site.Params.description }}<meta name="description" content="{{ . }}">{{ end }}
 	{{ with .Site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
 	
 	{{ $styles := resources.Get "style.css" }}
-	<link rel="stylesheet" href="{{ $styles.RelPermalink }}">
-	
+	<link rel="stylesheet" href="{{ $styles.RelPermalink }}">	
 	<link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
-	{{ with .OutputFormats.Get "RSS" -}}
-		{{ printf `<link rel="%s" type="%s" href="%s" title="%s">` .Rel .MediaType.Type .RelPermalink $.Site.Title | safeHTML }}
-	{{- end }}
+
+	<link rel="shortcut icon" type="image/png" href="/favicon.svg">
+	<link rel="shortcut icon" sizes="192x192" href="/favicon.svg">
+	<link rel="apple-touch-icon" href="/favicon.svg">
+
 </head>
 <body>
 	{{ partial "header" . }}
 	{{ block "main" . }}{{ end }}
-	<!-- {{ partial "footer" . }} -->
 </body>
 </html>
 
