--- a/themes/blank/static/css/type.css
+++ b/themes/blank/static/css/type.css
@@ -9,7 +9,7 @@
   font-weight: 400;
   font-style: normal;
 }
-@font-face {
+/* @font-face {
   font-family: "Recife Text";
   src: url("../type/recife-text/RecifeTextWeb-Book.eot");
   src: url("../type/recife-text/RecifeTextWeb-Book.eot?#iefix")
@@ -19,7 +19,7 @@
     url("../type/recife-text/RecifeTextWeb-Book.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
-}
+} */
 @font-face {
   font-family: "Recife Text";
   src: url("../type/recife-text/RecifeTextWeb-BookItalic.eot");
@@ -31,6 +31,21 @@
   font-weight: 400;
   font-style: italic;
 }
+
+
+
+@font-face {
+  font-family: "Recife Text";
+  src: url("../type/recife-text/RecifeTextWeb-Regular.eot");
+  src: url("../type/recife-text/RecifeTextWeb-Regular.eot?#iefix")
+      format("embedded-opentyp5"),
+    url("../type/recife-text/RecifeTextWeb-Regular.woff2") format("woff2"),
+    url("../type/recife-text/RecifeTextWeb-Regular.woff") format("woff"),
+    url("../type/recife-text/RecifeTextWeb-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
 @font-face {
   font-family: "Recife Text";
   src: url("../type/recife-text/RecifeTextWeb-Bold.eot");
