update theme switcher, hero copy and style, and typography adjustments in the summary.

--- a/themes/blank/layouts/_default/about.html
+++ b/themes/blank/layouts/_default/about.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
 
-<div class="long-form py-[8vw]">{{ .Content }}</div>
+<div class="long-form p-[8vw]">{{ .Content }}</div>
 
 {{ end }}
