--- a/themes/blank/layouts/partials/hero.html
+++ b/themes/blank/layouts/partials/hero.html
@@ -1,5 +1,5 @@
 <div class="hero p-[8vw]">
   <h1 class="max-w-[16ch]">
-    Hello, I'm Jitachi,<br> Software Designer at Railway.
+    Optimist.<br> Designer at <a href="https://railway.com">Railway</a>.
   </h1>
 </div>
