--- a/themes/blank/layouts/partials/theme-switcher.html
+++ b/themes/blank/layouts/partials/theme-switcher.html
@@ -6,8 +6,10 @@
 
 <!-- Theme toggle button with icons -->
 <button id="theme-toggle">
-  <i id="sun-icon" class="fas fa-sun" style="display: none;"></i>
-  <i id="moon-icon" class="fas fa-moon"></i>
+  <!-- <i id="sun-icon" class="fas fa-sun" style="display: none;"></i> -->
+  
+  <p id="sun-icon" class="text-lg opacity-40" style="display: none;">light</p>
+  <p id="moon-icon" class="text-lg opacity-40">dark</p>
 </button>
 
 <script>
