--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,11 +30,26 @@ header a.active {
   margin-bottom: .5em;
 }
 
+.text-large {
+  font-size: var(--font-size-large);
+}
 
 
 main,
 .long-form h1 {
   margin-bottom: calc(10vw + 4rem);
+}
+
+.hero h1 {
+  font-weight: 600;
+  letter-spacing: -.05em;
+  font-size: clamp(1.5rem, 6vw + 1rem, 10rem);
+}
+
+.hero a {
+  text-decoration: underline;
+  text-decoration-thickness: .05em;
+  text-underline-offset: .125em;
 }
 
 article h3 a {
@@ -47,7 +62,7 @@ article h3 a {
 h1 {
   font-size: clamp(2rem, 6vw + 1rem, 6rem);
   /* font-weight: 700; */
-  line-height: 1;
+  line-height: 1.125;
   letter-spacing: -0.0375em;
 }
 
@@ -151,6 +166,7 @@ em { font-style: italic; }
 
 .long-form ul,
 .long-form ol {
+  font-size: inherit;
   margin-bottom: 32px;
 }
 .long-form ul li,
@@ -163,10 +179,17 @@ em { font-style: italic; }
 
 .long-form li {
   list-style-position: outside;
-  list-style-type: square;
-  margin-left: 24px;
+  list-style-type: circle;
+  margin-left: 32px;
+  padding-left: 4px;
   line-height: 1.5;
 }
+
+/* .long-form li::before {
+  content: "⚬";
+  margin-right: 16px;
+  font-size: 20px;
+} */
 
 .long-form blockquote p {
   font-family: var(--font-family-sans);
@@ -245,7 +268,7 @@ body {
 /* Manual light and dark modes */
 body.light {
   --color-foreground: black;
-  --color-background: hsla(230, 25%, 90%, 1);
+  --color-background: #E9E9F0;
   --color-bg-lightest:   hsla(0, 100%, 0%, 0.05);
   --color-bg-light:      hsla(0, 100%, 0%, 0.1);
   --color-border-light:  hsla(0, 100%, 0%, 0.08);
@@ -253,7 +276,7 @@ body.light {
 
 body.dark {
   --color-foreground: white;
-  --color-background: #12121a;
+  --color-background: #2e2e45;
   --color-bg-lightest:   hsla(0, 100%, 100%, 0.05);
   --color-bg-light:      hsla(0, 100%, 100%, 0.1);
   --color-border-light:  hsla(0, 100%, 100%, 0.05);
