--- a/public/style.css
+++ b/public/style.css
@@ -575,16 +575,6 @@ video {
   margin-right: auto;
 }
 
-.mx-\[8vw\] {
-  margin-left: 8vw;
-  margin-right: 8vw;
-}
-
-.mx-\[12vw\] {
-  margin-left: 12vw;
-  margin-right: 12vw;
-}
-
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -605,12 +595,12 @@ video {
   margin-bottom: 2rem;
 }
 
-.mb-\[4vw\] {
-  margin-bottom: 4vw;
-}
-
 .mr-4 {
   margin-right: 1rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .mt-16 {
@@ -621,24 +611,8 @@ video {
   margin-top: 0.75rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mb-\[3vw\] {
-  margin-bottom: 3vw;
-}
-
-.mb-\[3\.5vw\] {
-  margin-bottom: 3.5vw;
-}
-
-.mb-\[8vw\] {
-  margin-bottom: 8vw;
+.mr-3 {
+  margin-right: 0.75rem;
 }
 
 .block {
@@ -665,6 +639,10 @@ video {
   min-width: 24rem;
 }
 
+.max-w-\[--content-width\] {
+  max-width: var(--content-width);
+}
+
 .max-w-\[16ch\] {
   max-width: 16ch;
 }
@@ -679,14 +657,6 @@ video {
 
 .max-w-xl {
   max-width: 36rem;
-}
-
-.max-w-\[--max-page-width\] {
-  max-width: var(--max-page-width);
-}
-
-.max-w-\[--content-width\] {
-  max-width: var(--content-width);
 }
 
 .flex-col {
@@ -798,11 +768,6 @@ video {
   padding-bottom: 4vw;
 }
 
-.py-\[8vw\] {
-  padding-top: 8vw;
-  padding-bottom: 8vw;
-}
-
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -811,41 +776,30 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.pb-\[2vw\] {
+  padding-bottom: 2vw;
+}
+
+.pt-\[2vw\] {
+  padding-top: 2vw;
+}
+
 .pt-\[8vw\] {
   padding-top: 8vw;
 }
 
-.pb-11 {
-  padding-bottom: 2.75rem;
-}
-
-.pb-12 {
-  padding-bottom: 3rem;
-}
-
-.pb-28 {
-  padding-bottom: 7rem;
-}
-
-.pt-8 {
-  padding-top: 2rem;
-}
-
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pt-6 {
-  padding-top: 1.5rem;
-}
-
-.pt-5 {
-  padding-top: 1.25rem;
+.align-bottom {
+  vertical-align: bottom;
 }
 
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-\[85\%\] {
@@ -862,42 +816,34 @@ video {
   line-height: 1.75rem;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-\[75\%\] {
+  font-size: 75%;
 }
 
 .font-semibold {
   font-weight: 600;
 }
 
+.font-medium {
+  font-weight: 500;
+}
+
 .tracking-tight {
   letter-spacing: -0.025em;
+}
+
+.tracking-\[-0\.0125em\] {
+  letter-spacing: -0.0125em;
 }
 
 .text-gray-500 {
@@ -911,6 +857,14 @@ video {
 
 .opacity-50 {
   opacity: 0.5;
+}
+
+.opacity-25 {
+  opacity: 0.25;
+}
+
+.opacity-40 {
+  opacity: 0.4;
 }
 
 .transition {
@@ -966,6 +920,10 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:items-baseline {
+    align-items: baseline;
+  }
+
   .md\:py-\[2vw\] {
     padding-top: 2vw;
     padding-bottom: 2vw;
@@ -978,6 +936,18 @@ video {
 
   .md\:pb-0 {
     padding-bottom: 0px;
+  }
+
+  .md\:align-baseline {
+    vertical-align: baseline;
+  }
+
+  .md\:align-top {
+    vertical-align: top;
+  }
+
+  .md\:align-bottom {
+    vertical-align: bottom;
   }
 }
 
