--- a/themes/blank/layouts/index.html
+++ b/themes/blank/layouts/index.html
@@ -4,8 +4,8 @@
 
 
     <!-- <ul id="grid-posts" class="md:grid md:grid-cols-2 xl:grid-cols-3 gap-2"> -->
-      <p class="text-2xl px-[8vw] pb-10 tracking-tight opacity-45">
-        Recently
+      <p class="text-2xl px-[8vw] pb-10 tracking-[-0.0125em] opacity-50 text-large">
+        thoughts
       </p>
 
       <ul class="gap-2">
