--- a/themes/blank/static/css/style.css
+++ b/themes/blank/static/css/style.css
@@ -30,11 +30,26 @@ header a.active {
   margin-bottom: .5em;
 }
 
+.text-large {
+  font-size: var(--font-size-large);
+}
 
 
 main,
 .long-form h1 {
   margin-bottom: calc(10vw + 4rem);
+}
+
+.hero h1 {
+  font-weight: 600;
+  letter-spacing: -.05em;
+  font-size: clamp(1.5rem, 6vw + 1rem, 10rem);
+}
+
+.hero a {
+  text-decoration: underline;
+  text-decoration-thickness: .05em;
+  text-underline-offset: .125em;
 }
 
 article h3 a {
@@ -47,7 +62,7 @@ article h3 a {
 h1 {
   font-size: clamp(2rem, 6vw + 1rem, 6rem);
   /* font-weight: 700; */
-  line-height: 1;
+  line-height: 1.125;
   letter-spacing: -0.0375em;
 }
 
@@ -151,6 +166,7 @@ em { font-style: italic; }
 
 .long-form ul,
 .long-form ol {
+  font-size: inherit;
   margin-bottom: 32px;
 }
 .long-form ul li,
@@ -252,7 +268,7 @@ body {
 /* Manual light and dark modes */
 body.light {
   --color-foreground: black;
-  --color-background: hsla(230, 25%, 90%, 1);
+  --color-background: #E9E9F0;
   --color-bg-lightest:   hsla(0, 100%, 0%, 0.05);
   --color-bg-light:      hsla(0, 100%, 0%, 0.1);
   --color-border-light:  hsla(0, 100%, 0%, 0.08);
