--- a/public/style.css
+++ b/public/style.css
@@ -627,6 +627,10 @@ video {
   display: flex;
 }
 
+.hidden {
+  display: none;
+}
+
 .w-9 {
   width: 2.25rem;
 }
@@ -659,6 +663,10 @@ video {
   max-width: 36rem;
 }
 
+.shrink-0 {
+  flex-shrink: 0;
+}
+
 .flex-col {
   flex-direction: column;
 }
@@ -673,6 +681,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.items-baseline {
+  align-items: baseline;
 }
 
 .justify-center {
@@ -699,8 +711,16 @@ video {
   gap: 2rem;
 }
 
+.gap-1 {
+  gap: 0.25rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .rounded-full {
@@ -766,6 +786,21 @@ video {
 .py-\[4vw\] {
   padding-top: 4vw;
   padding-bottom: 4vw;
+}
+
+.py-\[2vw\] {
+  padding-top: 2vw;
+  padding-bottom: 2vw;
+}
+
+.py-\[2vh\] {
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+}
+
+.py-\[4vh\] {
+  padding-top: 4vh;
+  padding-bottom: 4vh;
 }
 
 .pb-10 {
@@ -851,6 +886,11 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
+.text-red-50 {
+  --tw-text-opacity: 1;
+  color: rgb(254 242 242 / var(--tw-text-opacity));
+}
+
 .opacity-45 {
   opacity: 0.45;
 }
@@ -906,6 +946,14 @@ video {
 @media (min-width: 768px) {
   .md\:mt-1 {
     margin-top: 0.25rem;
+  }
+
+  .md\:block {
+    display: block;
+  }
+
+  .md\:inline-block {
+    display: inline-block;
   }
 
   .md\:flex {
