--- a/themes/blank/layouts/_default/baseof.html
+++ b/themes/blank/layouts/_default/baseof.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.LanguageCode | default "en-us" }}">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>{{ if .IsHome }}👋 • {{ else }}{{ if .Page.Title }}{{ .Page.Title }} • {{ end }}{{ end }}{{ .Site.Title }}</title>
-
-	{{ with .Site.Params.description }}<meta name="description" content="{{ . }}">{{ end }}
-	{{ with .Site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>{{ if .IsHome }}👋 • {{ else }}{{ if .Page.Title }}{{ .Page.Title }} • {{ end }}{{ end }}{{ .Site.Title }}</title>
 	
-	{{ $styles := resources.Get "style.css" }}
-	<link rel="stylesheet" href="{{ $styles.RelPermalink }}">	
-	<link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
-
-	<link rel="shortcut icon" type="image/png" href="/favicon.svg">
-	<link rel="shortcut icon" sizes="192x192" href="/favicon.svg">
-	<link rel="apple-touch-icon" href="/favicon.svg">
-
-</head>
+		{{ with .Site.Params.description }}<meta name="description" content="{{ . }}">{{ end }}
+		{{ with .Site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
+	
+		<script>
+			(function() {
+				let theme = localStorage.getItem("theme") || "auto";
+				let systemDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
+				
+				if (theme === "dark" || (theme === "auto" && systemDark)) {
+					document.documentElement.classList.add("dark");
+				} else {
+					document.documentElement.classList.add("light");
+				}
+			})();
+		</script>
+	
+		{{ $styles := resources.Get "style.css" }}
+		<link rel="stylesheet" href="{{ $styles.RelPermalink }}">	
+		<link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
+	
+		<link rel="shortcut icon" type="image/png" href="/favicon.svg">
+		<link rel="shortcut icon" sizes="192x192" href="/favicon.svg">
+		<link rel="apple-touch-icon" href="/favicon.svg">
+	</head>
 <body>
 	{{ partial "header" . }}
 	{{ block "main" . }}{{ end }}
