--- a/themes/blank/assets/style.css
+++ b/themes/blank/assets/style.css
@@ -554,6 +554,10 @@ video {
   --tw-contain-style:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -570,9 +574,30 @@ video {
   left: 1rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.my-12 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
 .mb-2 {
@@ -595,10 +620,6 @@ video {
   margin-bottom: 2rem;
 }
 
-.mr-4 {
-  margin-right: 1rem;
-}
-
 .mt-12 {
   margin-top: 3rem;
 }
@@ -607,12 +628,28 @@ video {
   margin-top: 4rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mt-3 {
   margin-top: 0.75rem;
 }
 
-.mr-3 {
-  margin-right: 0.75rem;
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-\[8vw\] {
+  margin-top: 8vw;
+}
+
+.mt-auto {
+  margin-top: auto;
+}
+
+.ml-64 {
+  margin-left: 16rem;
 }
 
 .block {
@@ -627,12 +664,28 @@ video {
   display: flex;
 }
 
-.hidden {
-  display: none;
+.grid {
+  display: grid;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .w-9 {
   width: 2.25rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-64 {
+  width: 16rem;
 }
 
 .min-w-9 {
@@ -651,6 +704,22 @@ video {
   max-width: 16ch;
 }
 
+.max-w-\[20ch\] {
+  max-width: 20ch;
+}
+
+.max-w-\[65ch\] {
+  max-width: 65ch;
+}
+
+.max-w-\[720px\] {
+  max-width: 720px;
+}
+
+.max-w-\[800px\] {
+  max-width: 800px;
+}
+
 .max-w-\[var\(--content-width\)\] {
   max-width: var(--content-width);
 }
@@ -663,8 +732,20 @@ video {
   max-width: 36rem;
 }
 
+.max-w-4xl {
+  max-width: 56rem;
+}
+
+.flex-1 {
+  flex: 1 1 0%;
+}
+
 .shrink-0 {
   flex-shrink: 0;
+}
+
+.grid-cols-\[256px_1fr\] {
+  grid-template-columns: 256px 1fr;
 }
 
 .flex-col {
@@ -675,16 +756,12 @@ video {
   align-content: center;
 }
 
-.items-start {
-  align-items: flex-start;
-}
-
 .items-center {
   align-items: center;
 }
 
-.items-baseline {
-  align-items: baseline;
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-center {
@@ -693,6 +770,10 @@ video {
 
 .justify-between {
   justify-content: space-between;
+}
+
+.gap-1 {
+  gap: 0.25rem;
 }
 
 .gap-2 {
@@ -707,20 +788,20 @@ video {
   gap: 1rem;
 }
 
-.gap-8 {
-  gap: 2rem;
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
-.gap-1 {
-  gap: 0.25rem;
+.space-y-1 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden {
   overflow: hidden;
-}
-
-.overflow-x-hidden {
-  overflow-x: hidden;
 }
 
 .rounded-full {
@@ -731,12 +812,20 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .border {
   border-width: 1px;
 }
 
 .border-t {
   border-top-width: 1px;
+}
+
+.border-r {
+  border-right-width: 1px;
 }
 
 .border-\[var\(--color-border-light\)\] {
@@ -752,9 +841,27 @@ video {
   background-color: var(--color-bg-lightest);
 }
 
+.bg-gray-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+.bg-\[var\(--color-background\)\] {
+  background-color: var(--color-background);
+}
+
+.bg-\[var\(--color-bg-light\)\] {
+  background-color: var(--color-bg-light);
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-2 {
@@ -773,9 +880,30 @@ video {
   padding: 8vw;
 }
 
+.p-12 {
+  padding: 3rem;
+}
+
+.p-8 {
+  padding: 2rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-40 {
+  padding-left: 10rem;
+  padding-right: 10rem;
 }
 
 .px-\[8vw\] {
@@ -783,24 +911,14 @@ video {
   padding-right: 8vw;
 }
 
-.py-\[4vw\] {
-  padding-top: 4vw;
-  padding-bottom: 4vw;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-.py-\[2vw\] {
-  padding-top: 2vw;
-  padding-bottom: 2vw;
-}
-
-.py-\[2vh\] {
-  padding-top: 2vh;
-  padding-bottom: 2vh;
-}
-
-.py-\[4vh\] {
-  padding-top: 4vh;
-  padding-bottom: 4vh;
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pb-10 {
@@ -815,16 +933,28 @@ video {
   padding-bottom: 2vw;
 }
 
-.pt-\[2vw\] {
-  padding-top: 2vw;
+.pb-\[6vw\] {
+  padding-bottom: 6vw;
+}
+
+.pt-\[6vw\] {
+  padding-top: 6vw;
 }
 
 .pt-\[8vw\] {
   padding-top: 8vw;
 }
 
-.align-bottom {
-  vertical-align: bottom;
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.pr-3 {
+  padding-right: 0.75rem;
 }
 
 .text-2xl {
@@ -837,8 +967,13 @@ video {
   line-height: 2.5rem;
 }
 
-.text-\[85\%\] {
-  font-size: 85%;
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-\[75\%\] {
+  font-size: 75%;
 }
 
 .text-base {
@@ -851,34 +986,26 @@ video {
   line-height: 1.75rem;
 }
 
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
-.text-\[75\%\] {
-  font-size: 75%;
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .font-semibold {
   font-weight: 600;
 }
 
-.font-medium {
-  font-weight: 500;
+.tracking-\[-0\.0125em\] {
+  letter-spacing: -0.0125em;
 }
 
 .tracking-tight {
   letter-spacing: -0.025em;
-}
-
-.tracking-\[-0\.0125em\] {
-  letter-spacing: -0.0125em;
 }
 
 .text-gray-500 {
@@ -886,9 +1013,8 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.text-red-50 {
-  --tw-text-opacity: 1;
-  color: rgb(254 242 242 / var(--tw-text-opacity));
+.opacity-40 {
+  opacity: 0.4;
 }
 
 .opacity-45 {
@@ -899,24 +1025,10 @@ video {
   opacity: 0.5;
 }
 
-.opacity-25 {
-  opacity: 0.25;
-}
-
-.opacity-40 {
-  opacity: 0.4;
-}
-
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition-all {
-  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -944,22 +1056,6 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:mt-1 {
-    margin-top: 0.25rem;
-  }
-
-  .md\:block {
-    display: block;
-  }
-
-  .md\:inline-block {
-    display: inline-block;
-  }
-
-  .md\:flex {
-    display: flex;
-  }
-
   .md\:grid {
     display: grid;
   }
@@ -968,49 +1064,8 @@ video {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .md\:items-baseline {
-    align-items: baseline;
-  }
-
-  .md\:py-\[2vw\] {
-    padding-top: 2vw;
-    padding-bottom: 2vw;
-  }
-
   .md\:py-\[4vw\] {
     padding-top: 4vw;
     padding-bottom: 4vw;
-  }
-
-  .md\:pb-0 {
-    padding-bottom: 0px;
-  }
-
-  .md\:align-baseline {
-    vertical-align: baseline;
-  }
-
-  .md\:align-top {
-    vertical-align: top;
-  }
-
-  .md\:align-bottom {
-    vertical-align: bottom;
-  }
-}
-
-@media (min-width: 1024px) {
-  .lg\:flex {
-    display: flex;
-  }
-
-  .lg\:pb-0 {
-    padding-bottom: 0px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .xl\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
