--- a/themes/blank/layouts/index.html
+++ b/themes/blank/layouts/index.html
@@ -3,12 +3,11 @@
     {{ partial "hero" . }}
 
 
-    <!-- <ul id="grid-posts" class="md:grid md:grid-cols-2 xl:grid-cols-3 gap-2"> -->
-      <p class="text-2xl px-[8vw] pb-10 tracking-[-0.0125em] opacity-50 text-large">
+    <!-- <p class="text-2xl px-[8vw] pb-10 tracking-[-0.0125em] opacity-50 text-large">
         thoughts
-      </p>
+      </p> -->
 
-      <ul class="gap-2">
+    <ul class="gap-2">
       {{ $paginator := .Paginate (where .Site.RegularPages "Type" "posts") }}
       {{ range $paginator.Pages }}
 
