--- a/themes/blank/layouts/partials/sidebar.html
+++ b/themes/blank/layouts/partials/sidebar.html
@@ -1,14 +1,41 @@
-<aside>
-	<div>
-		<div>
-			<h3>LATEST POSTS</h3>
-		</div>
-		<div>
-			<ul>
-				{{ range first 5 (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) }}
-				<li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
-				{{ end }}
-			</ul>
-		</div>
-	</div>
+<aside
+  class="fixed left-0 top-0 h-full w-64 p-6 z-50"
+  style="padding: clamp(32px, 4vw, 64px) 24px 24px clamp(32px, 4vw, 64px);"
+>
+  <div class="flex flex-col h-full">
+    <!-- Logo -->
+    <div class="flex items-center gap-3 mb-8">
+      <a class="logo" href="{{ .Site.BaseURL }}">
+        <img
+          class="w-9 min-w-9 rounded-full border border-white"
+          src="{{ .Site.BaseURL }}img/avatar.png"
+        />
+      </a>
+    </div>
+
+    <!-- Navigation Menu -->
+    <nav class="flex-1">
+      <ul class="space-y-1">
+        {{ $currentPage := . }}
+        {{ range .Site.Menus.main }}
+          <li>
+            <a
+              class="block py-3 pr-3 text-base transition ease-in-out duration-200 rounded-lg {{ if or ($currentPage.IsMenuCurrent "main" .) ($currentPage.HasMenuCurrent "main" .) }}
+                font-semibold
+              {{ end }}"
+              href="{{ .URL }}"
+              title="{{ .Title }}"
+            >
+              {{ .Name }}
+            </a>
+          </li>
+        {{ end }}
+      </ul>
+    </nav>
+
+    <!-- Theme Switcher -->
+    <div class="mt-auto">
+      {{ partial "theme-switcher.html" . }}
+    </div>
+  </div>
 </aside>
