--- a/themes/blank/layouts/_default/summary.html
+++ b/themes/blank/layouts/_default/summary.html
@@ -1,7 +1,7 @@
-<li class="">
-  <a href="{{ .Permalink }}">
+<li class="flex flex-row">
+  <a href="{{ .Permalink }}" class="w-full">
     <article
-      class="hover:bg-[var(--color-bg-lightest)] transition-colors group relative rounded-md min-w-96 max-w-[720px] mx-auto my-12 p-8"
+      class="hover:bg-[var(--color-bg-lightest)] transition-colors group relative rounded-md w-full p-8"
     >
       <p
         class="group-hover:underline font-semibold text-4xl mb-4 tracking-tight"
