--- a/themes/blank/layouts/partials/hero.html
+++ b/themes/blank/layouts/partials/hero.html
@@ -1,13 +1,6 @@
-<div class="hero w-full flex justify-center">
-  <div class="w-full max-w-[720px] mx-auto">
-    <div class="p-8">
-      <h1
-        class="group-hover:underline font-semibold text-4xl mb-4 tracking-tight"
-        style="margin-left: 0; letter-spacing: -0.05em; font-size: 2.25rem !important;"
-      >
-        Optimist.<br />
-        Designer at <a href="https://railway.com">Railway</a>.
-      </h1>
-    </div>
-  </div>
+<div class="hero w-full flex">
+  <h1 class="font-semibold text-6xl tracking-tight">
+    Optimist.<br />
+    Designer at <a href="https://railway.com">Railway</a>.
+  </h1>
 </div>
