--- a/themes/blank/assets/style.css
+++ b/themes/blank/assets/style.css
@@ -554,40 +554,6 @@ video {
   --tw-contain-style:  ;
 }
 
-.container {
-  width: 100%;
-}
-
-@media (min-width: 640px) {
-  .container {
-    max-width: 640px;
-  }
-}
-
-@media (min-width: 768px) {
-  .container {
-    max-width: 768px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .container {
-    max-width: 1024px;
-  }
-}
-
-@media (min-width: 1280px) {
-  .container {
-    max-width: 1280px;
-  }
-}
-
-@media (min-width: 1536px) {
-  .container {
-    max-width: 1536px;
-  }
-}
-
 .fixed {
   position: fixed;
 }
@@ -600,16 +566,20 @@ video {
   position: relative;
 }
 
+.sticky {
+  position: sticky;
+}
+
 .bottom-4 {
   bottom: 1rem;
 }
 
-.left-4 {
-  left: 1rem;
-}
-
 .left-0 {
   left: 0px;
+}
+
+.left-4 {
+  left: 1rem;
 }
 
 .top-0 {
@@ -625,13 +595,39 @@ video {
   margin-right: auto;
 }
 
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+
 .my-12 {
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
 
-.mb-12 {
-  margin-bottom: 3rem;
+.my-16 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
+.my-32 {
+  margin-top: 8rem;
+  margin-bottom: 8rem;
+}
+
+.my-64 {
+  margin-top: 16rem;
+  margin-bottom: 16rem;
+}
+
+.my-96 {
+  margin-top: 24rem;
+  margin-bottom: 24rem;
+}
+
+.my-\[8vw\] {
+  margin-top: 8vw;
+  margin-bottom: 8vw;
 }
 
 .mb-2 {
@@ -674,16 +670,12 @@ video {
   margin-top: 1rem;
 }
 
-.mt-\[8vw\] {
-  margin-top: 8vw;
-}
-
 .mt-auto {
   margin-top: auto;
 }
 
-.ml-64 {
-  margin-left: 16rem;
+.mb-16 {
+  margin-bottom: 4rem;
 }
 
 .block {
@@ -706,8 +698,8 @@ video {
   height: 100%;
 }
 
-.w-28 {
-  width: 7rem;
+.w-64 {
+  width: 16rem;
 }
 
 .w-9 {
@@ -718,24 +710,20 @@ video {
   width: 100%;
 }
 
-.w-64 {
-  width: 16rem;
-}
-
 .min-w-9 {
   min-width: 2.25rem;
 }
 
-.min-w-96 {
-  min-width: 24rem;
+.max-w-4xl {
+  max-width: 56rem;
 }
 
 .max-w-\[--content-width\] {
   max-width: var(--content-width);
 }
 
-.max-w-\[16ch\] {
-  max-width: 16ch;
+.max-w-\[1400px\] {
+  max-width: 1400px;
 }
 
 .max-w-\[20ch\] {
@@ -750,10 +738,6 @@ video {
   max-width: 720px;
 }
 
-.max-w-\[800px\] {
-  max-width: 800px;
-}
-
 .max-w-\[var\(--content-width\)\] {
   max-width: var(--content-width);
 }
@@ -766,8 +750,8 @@ video {
   max-width: 36rem;
 }
 
-.max-w-4xl {
-  max-width: 56rem;
+.max-w-\[960px\] {
+  max-width: 960px;
 }
 
 .flex-1 {
@@ -778,8 +762,12 @@ video {
   flex-shrink: 0;
 }
 
-.grid-cols-\[256px_1fr\] {
-  grid-template-columns: 256px 1fr;
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-col {
@@ -792,10 +780,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-center {
@@ -822,28 +806,8 @@ video {
   gap: 1rem;
 }
 
-.space-y-2 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
-}
-
-.space-y-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
-}
-
-.space-y-0 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0px * var(--tw-space-y-reverse));
-}
-
-.space-y-0\.5 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.125rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.125rem * var(--tw-space-y-reverse));
+.gap-8 {
+  gap: 2rem;
 }
 
 .overflow-hidden {
@@ -854,12 +818,12 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border {
@@ -868,10 +832,6 @@ video {
 
 .border-t {
   border-top-width: 1px;
-}
-
-.border-r {
-  border-right-width: 1px;
 }
 
 .border-\[var\(--color-border-light\)\] {
@@ -883,13 +843,13 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
-.bg-\[var\(--color-bg-lightest\)\] {
-  background-color: var(--color-bg-lightest);
+.border-red-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
-.bg-gray-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+.bg-\[var\(--color-bg-lightest\)\] {
+  background-color: var(--color-bg-lightest);
 }
 
 .bg-gray-800 {
@@ -897,12 +857,16 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
+.bg-\[var\(--color-bg\)\] {
+  background-color: var(--color-bg);
+}
+
 .bg-\[var\(--color-background\)\] {
   background-color: var(--color-background);
 }
 
-.bg-\[var\(--color-bg-light\)\] {
-  background-color: var(--color-bg-light);
+.bg-opacity-95 {
+  --tw-bg-opacity: 0.95;
 }
 
 .object-cover {
@@ -922,24 +886,16 @@ video {
   padding: 1rem;
 }
 
-.p-\[8vw\] {
-  padding: 8vw;
-}
-
-.p-12 {
-  padding: 3rem;
+.p-6 {
+  padding: 1.5rem;
 }
 
 .p-8 {
   padding: 2rem;
 }
 
-.p-3 {
-  padding: 0.75rem;
-}
-
-.p-6 {
-  padding: 1.5rem;
+.p-\[8vw\] {
+  padding: 8vw;
 }
 
 .px-4 {
@@ -957,27 +913,18 @@ video {
   padding-right: 8vw;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
 
-.pb-10 {
-  padding-bottom: 2.5rem;
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
+.pb-10 {
+  padding-bottom: 2.5rem;
 }
 
 .pb-\[2vw\] {
@@ -988,24 +935,40 @@ video {
   padding-bottom: 6vw;
 }
 
-.pt-\[6vw\] {
-  padding-top: 6vw;
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .pt-\[8vw\] {
   padding-top: 8vw;
 }
 
-.pt-2 {
-  padding-top: 0.5rem;
+.pt-12 {
+  padding-top: 3rem;
 }
 
-.pt-4 {
-  padding-top: 1rem;
+.pb-8 {
+  padding-bottom: 2rem;
 }
 
-.pr-3 {
-  padding-right: 0.75rem;
+.pb-16 {
+  padding-bottom: 4rem;
+}
+
+.pt-\[4vw\] {
+  padding-top: 4vw;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-12 {
+  padding-bottom: 3rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
 }
 
 .text-2xl {
@@ -1020,6 +983,11 @@ video {
 
 .text-5xl {
   font-size: 3rem;
+  line-height: 1;
+}
+
+.text-6xl {
+  font-size: 3.75rem;
   line-height: 1;
 }
 
@@ -1042,9 +1010,9 @@ video {
   line-height: 1.75rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-8xl {
+  font-size: 6rem;
+  line-height: 1;
 }
 
 .font-semibold {
@@ -1064,6 +1032,11 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
+.text-red-50 {
+  --tw-text-opacity: 1;
+  color: rgb(254 242 242 / var(--tw-text-opacity));
+}
+
 .opacity-40 {
   opacity: 0.4;
 }
@@ -1074,6 +1047,12 @@ video {
 
 .opacity-50 {
   opacity: 0.5;
+}
+
+.backdrop-blur-sm {
+  --tw-backdrop-blur: blur(4px);
+  -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+          backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
 }
 
 .transition {
