--- a/themes/blank/layouts/_default/list.html
+++ b/themes/blank/layouts/_default/list.html
@@ -1,14 +1,16 @@
 {{ define "main" }}
-<main>
-  {{ if or .Title .Content }}
-  <div>
-    {{ with .Title }}
-    <h1>{{ . }}</h1>
-    {{ end }} {{ with .Content }}
-    <div>{{ . }}</div>
+  <main>
+    {{ if or .Title .Content }}
+      <div>
+        {{ with .Title }}
+          <h1>{{ . }}</h1>
+        {{ end }}
+        {{ with .Content }}
+          <div>{{ . }}</div>
+        {{ end }}
+      </div>
     {{ end }}
-  </div>
-  {{ end }} {{ range .Paginator.Pages }} {{ .Render "summary" }} {{ end }} {{
-  partial "pagination.html" . }}
-</main>
-{{ partial "sidebar.html" . }} {{ end }}
+    {{ range .Paginator.Pages }}{{ .Render "summary" }}{{ end }}
+    {{ partial "pagination.html" . }}
+  </main>
+{{ end }}
