--- a/themes/blank/layouts/partials/header.html
+++ b/themes/blank/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header class="flex items-center justify-between p-[8vw] md:py-[4vw]">
+<header class="flex items-center justify-between">
   <div class="flex items-center gap-3">
     <a class="logo" href="{{ .Site.BaseURL }}">
       <img
